Correct company name

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
             <div class="card-body">
               <h5 class="card-title">Drupal Meetup Tokyo #24</h5>
               <p class="card-subtitle mb-2 info">
-                開催日時：2018年7月12日19:30〜21:00
-                <br> 場所：株式会社ゼロベース
+                開催日時：2018年7月12日 19:30〜21:00
+                <br> 場所：ゼロベース株式会社
               </p>
               <p class="card-text">トピックを参加者全員で語り合う形式です。<br /> 
                 分からないキーワードが登場したら即質問OK、もちろん聴いているだけでもOKです！<br />
@@ -62,8 +62,8 @@
             <div class="card-body">
               <h5 class="card-title">Drupal Meetup Tokyo #23</h5>
               <p class="card-subtitle mb-2 info">
-                開催日時：2018年7月12日19:30〜21:00<br>
-                場所：株式会社ゼロベース
+                開催日時：2018年7月12日 19:30〜21:00<br>
+                場所：ゼロベース株式会社
               </p>
               <p class="card-text">トピックを参加者全員で語り合う形式です。
                 <br /> 分からないキーワードが登場したら即質問OK、もちろん聴いているだけでもOKです！
@@ -76,8 +76,8 @@
             <div class="card-body">
               <h5 class="card-title">Drupal Meetup Tokyo #22</h5>
               <p class="card-subtitle mb-2 info">
-                開催日時：2018年7月12日19:30〜21:00
-                <br> 場所：株式会社ゼロベース
+                開催日時：2018年7月12日 19:30〜21:00
+                <br> 場所：ゼロベース株式会社
               </p>
               <p class="card-text">トピックを参加者全員で語り合う形式です。
                 <br /> 分からないキーワードが登場したら即質問OK、もちろん聴いているだけでもOKです！
