--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="keywords" content="Drupal,ドルーパル,meetup,ミートアップ" />
+  <meta name="description" content="Drupalに関する話題を気軽に情報交換できるMeetupを都内で定期的に開催します。" />
+  <meta property="og:site_name" content="Drupal Meetup Tokyo" />
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://drupal-tokyo.github.io/" />
+  <meta property="og:title" content="Drupal Meetup Tokyo" />
+  <!-- <meta property="og:image" content="サムネイル画像のURL" /> -->
   <title>Drupal Meetup Tokyo</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="./assets/css/styles.css">
@@ -102,7 +109,7 @@
       <div class="col-12">
         <h2>About Us</h2>
         <h4>Drupal Meetup Tokyoとは</h4>
-        <p>Drupalに関する話題を気軽に情報交換できる場を定期的に開催します。</p>
+        <p>Drupalに関する話題を気軽に情報交換できるイベントを定期的に開催します。</p>
         <p>Japan Drupal Meetup is a place where Drupal-related topics could be discussed and information exchanged more freely.</p>
       </div>
     </div>
