Change past event button color automatically

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <br /> 分からないキーワードが登場したら即質問OK、もちろん聴いているだけでもOKです！
                 <br /> 今回は3つの視点からモジュールを語り合います。
               </p>
-              <a href="https://drupal-tokyo.connpass.com/event/91268/" class="card-link btn btn-secondary" target="_blank"><span class="event-register">参加登録・</span><span class="event-detail">詳細を見る</span></a>
+              <a href="https://drupal-tokyo.connpass.com/event/91268/" class="card-link btn btn-primary" target="_blank"><span class="event-register">参加登録・</span><span class="event-detail">詳細を見る</span></a>
             </div>
           </div>
           <div class="card event mb-3">
@@ -103,7 +103,7 @@
   </div>
 </section>
 
-<section id="about" class="section about d-flex align-items-center">
+<section id="about" class="section about">
   <div class="container">
     <div class="row">
       <div class="col-12">
