--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
   <div class="container">
     <a class="navbar-brand" href="#">Drupal Meetup Tokyo</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -36,11 +36,11 @@
   </div>
 </nav>
 
-<section id="hero-area" class="section hero-area d-flex align-items-center justify-content-center mb-5">
+<section id="hero-area" class="section hero-area d-flex align-items-center justify-content-center">
   <h1 class="page-title py-2">Drupal Meetup Tokyo</h1>
 </section>
 
-<section id="events" class="section events mb-5">
+<section id="events" class="section events py-5 mb-5">
   <div class="container">
     <div class="row">
       <div class="col-12">
