--- a/index.html
+++ b/index.html
@@ -1,135 +1,86 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="keywords" content="Drupal,ドルーパル,meetup,ミートアップ" />
-  <meta name="description" content="Drupalに関する話題を気軽に情報交換できるMeetupを都内で定期的に開催します。" />
-  <meta property="og:site_name" content="Drupal Meetup Tokyo" />
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://drupal-tokyo.github.io/" />
-  <meta property="og:title" content="Drupal Meetup Tokyo" />
-  <!-- <meta property="og:image" content="サムネイル画像のURL" /> -->
-  <title>Drupal Meetup Tokyo</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
-  <link rel="stylesheet" href="./assets/css/styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="keywords" content="Drupal,ドルーパル,meetup,ミートアップ" />
+    <meta name="description" content="Drupalに関する話題を気軽に情報交換できるMeetupを都内で定期的に開催します。" />
+    <meta property="og:site_name" content="Drupal Meetup Tokyo" />
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://drupal-tokyo.github.io/" />
+    <meta property="og:title" content="Drupal Meetup Tokyo" />
+    <!-- <meta property="og:image" content="サムネイル画像のURL" /> -->
+    <title>Drupal Meetup Tokyo</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
+
 <body>
-<nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
-  <div class="container">
-    <a class="navbar-brand" href="#">Drupal Meetup Tokyo</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-      aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item active">
-          <a class="nav-link smooth-scroll" href="#events">Events</a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link smooth-scroll" href="#about">About</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
-
-<section id="hero-area" class="section hero-area d-flex align-items-center justify-content-center">
-  <h1 class="page-title py-2">Drupal Meetup Tokyo</h1>
-</section>
-
-<section id="events" class="section events py-5 mb-5">
-  <div class="container">
-    <div class="row">
-      <div class="col-12">
-        <h2>近日開催のイベント</h2>
-        <div class="event-list upcaming-event-list mb-5">
-          <!-- 近日開催イベント -->
-          <div class="card event mb-3 d-md-flex flex-lg-row flex-md-nowrap">
-            <img class="card-img" src="./assets/images/chaw-e1484043658640.jpg" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">Drupal Meetup Tokyo #24</h5>
-              <p class="card-subtitle mb-2 info">
-                開催日時：2018年7月12日 19:30〜21:00
-                <br> 場所：ゼロベース株式会社
-              </p>
-              <p class="card-text">トピックを参加者全員で語り合う形式です。<br /> 
-                分からないキーワードが登場したら即質問OK、もちろん聴いているだけでもOKです！<br />
-                今回は3つの視点からモジュールを語り合います。</p>
-              <a href="https://drupal-tokyo.connpass.com/event/91268/" class="card-link btn btn-primary" target="_blank"><span class="event-register">参加登録・</span><span class="event-detail">詳細を見る</span></a>
+    <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
+        <div class="container">
+            <a class="navbar-brand" href="https://drupal-tokyo.github.io/">Drupal Meetup Tokyo</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link smooth-scroll" href="https://drupal-tokyo.connpass.com/" target="_blank">Events</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link smooth-scroll" href="https://trello.com/b/wGeNlNkf/drupal-meetup-tokyo"
+                            target="_blank">Trello</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link smooth-scroll" href="https://github.com/drupal-tokyo" target="_blank">Github</a>
+                    </li>
+                </ul>
             </div>
-          </div>
         </div>
-        <h2>過去のイベント</h2>
-        <div class="event-list event-list-past">
-          <!-- 過去のイベント -->
-          <div class="card event mb-3">
-            <div class="card-body">
-              <h5 class="card-title">Drupal Meetup Tokyo #23</h5>
-              <p class="card-subtitle mb-2 info">
-                開催日時：2018年7月12日 19:30〜21:00<br>
-                場所：ゼロベース株式会社
-              </p>
-              <p class="card-text">トピックを参加者全員で語り合う形式です。
-                <br /> 分からないキーワードが登場したら即質問OK、もちろん聴いているだけでもOKです！
-                <br /> 今回は3つの視点からモジュールを語り合います。
-              </p>
-              <a href="https://drupal-tokyo.connpass.com/event/91268/" class="card-link btn btn-primary" target="_blank"><span class="event-register">参加登録・</span><span class="event-detail">詳細を見る</span></a>
+    </nav>
+    <section id="events" class="section events py-5 mb-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <h1>Drupal Meetup Tokyoとは</h1>
+                    <div class="event-list upcaming-event-list mb-5">
+                        <!-- 近日開催イベント -->
+                        <div class="card event mb-3 d-md-flex flex-lg-row flex-md-nowrap">
+                            <img src="./assets/images/dmt-black_500x500.png" alt="Drupal Meetup Tokyo logo" class="img-fluid card-img">
+                            <div class="card-body">
+                                <h5 class="card-title">
+                                    <h4>About Us</h4>
+                                </h5>
+                                <p>Drupalに関する話題を気軽に情報交換できるイベントを定期的に開催します。</p>
+                                <p>Japan Drupal Meetup is a place where Drupal-related topics could be discussed and
+                                    information exchanged more freely.</p>
+                                <a href="https://drupal-tokyo.connpass.com/" class="btn btn-primary" target="_blank">次回のイベントを見る</a>
+                                <a href="https://trello.com/b/wGeNlNkf/drupal-meetup-tokyo" class="btn btn-outline-primary ml-sm-2"
+                                    target="_blank">トピックリストを見る</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
-          <div class="card event mb-3">
-            <div class="card-body">
-              <h5 class="card-title">Drupal Meetup Tokyo #22</h5>
-              <p class="card-subtitle mb-2 info">
-                開催日時：2018年7月12日 19:30〜21:00
-                <br> 場所：ゼロベース株式会社
-              </p>
-              <p class="card-text">トピックを参加者全員で語り合う形式です。
-                <br /> 分からないキーワードが登場したら即質問OK、もちろん聴いているだけでもOKです！
-                <br /> 今回は3つの視点からモジュールを語り合います。
-              </p>
-              <a href="https://drupal-tokyo.connpass.com/event/91268/" class="card-link btn btn-secondary" target="_blank">
-                <span class="event-register">参加登録・</span>
-                <span class="event-detail">詳細を見る</span>
-              </a>
-              </div>
-            </div>
-          </div>
         </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-<section id="about" class="section about">
-  <div class="container">
-    <div class="row">
-      <div class="col-12">
-        <h2>About Us</h2>
-        <h4>Drupal Meetup Tokyoとは</h4>
-        <p>Drupalに関する話題を気軽に情報交換できるイベントを定期的に開催します。</p>
-        <p>Japan Drupal Meetup is a place where Drupal-related topics could be discussed and information exchanged more freely.</p>
-      </div>
-    </div>
-  </div>
-</section>
-
-<footer class="footer py-3">
-  <div class="container">
-    <div class="row">
-      <div class="col-12">
-        &copy; 2018 All Rights Reserved.
-      </div>
-    </div>
-  </div>
-</footer>
-
-<!-- JS -->
-<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
-<script src="./assets/js/script.js"></script>
+    </section>
+    <footer class="footer py-3">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    &copy; 2018 All Rights Reserved.
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
+    <script src="./assets/js/script.js"></script>
 </body>
+
 </html>
